faq, about us and home page contact section ui change and alignment fixed as per client feedback

--- a/src/styles/_responsive.scss
+++ b/src/styles/_responsive.scss
@@ -468,9 +468,9 @@
 
   .home-contact-section {
     .contact-inner-section {
-      border-radius: 16px;
-      padding: 34px 15px;
+      border-radius: 12px;
       min-height: auto;
+      padding: 24px 15px;
 
       .heading_section {
         margin-bottom: 24px;
@@ -481,7 +481,7 @@
         }
 
         .section-description {
-          font-size: 16px;
+          font-size: 14px;
         }
       }
 
@@ -585,6 +585,11 @@
   .banner-section-common {
     min-height: 400px;
     padding: 90px 0 60px;
+
+    &.about-us-banner-section,
+    &.faq-banner-section {
+      padding: 60px 0 60px;
+    }
 
     .banner-content {
       .heading_section {
@@ -1128,8 +1133,8 @@
 
   .home-contact-section {
     .contact-inner-section {
-      border-radius: 12px;
-      padding: 32px 15px;
+      border-radius: 8px;
+      padding: 20px 15px;
 
       .heading_section {
         .section-title {
@@ -1143,8 +1148,13 @@
       }
 
       .hotel-search-button {
-        font-size: 16px;
-        padding: 6.2px 15px;
+        font-size: 14px;
+        padding: 6.2px 12px;
+
+        svg {
+          width: 18px;
+          height: 18px;
+        }
       }
     }
   }
@@ -1254,6 +1264,11 @@
     min-height: 240px;
     padding: 45px 0 30px;
     background-position: 100% 100%;
+
+    &.about-us-banner-section,
+    &.faq-banner-section {
+      padding: 40px 0;
+    }
 
     .banner-content {
       .banner-bradcumb-menu {
